--- a/FinalProject_official.ipynb
+++ b/FinalProject_official.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,17 @@
       "Start date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
       "End date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
       "Map Selection. Choose one from the following: all, vertigo, dust2, mirage, overpass, nuke, inferno, cobblestone, cache, train.\n",
-      "Choose the map: vertigo\n",
-      "https://www.hltv.org/stats/players?startDate=&endDate=&maps=de_vertigo&rankingFilter=Top30\n"
+      "Choose the map: train\n",
+      "https://www.hltv.org/stats/players?startDate=&endDate=&maps=de_train&rankingFilter=Top30\n",
+      "Start date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
+      "End date (yyyy-mm-dd, leave blank if you want 'All-time' results): \n",
+      "Map Selection. Choose one from the following: all, vertigo, dust2, mirage, overpass, nuke, inferno, cobblestone, cache, train.\n",
+      "Choose the map: nuke\n",
+      "Enter team ('TERRORIST or COUNTER_TERRORIST'):counter_terrorist\n",
+      "https://www.hltv.org/stats/teams/pistols?startDate=&endDate=&maps=de_nuke&side=COUNTER_TERRORIST&rankingFilter=Top30\n",
+      "--------------------------------------------\n",
+      "PISTOL ROUNDS\n",
+      "--------------------------------------------\n"
      ]
     }
    ],
@@ -31,7 +40,9 @@
     "\n",
     "url = \"https://www.hltv.org/stats\"\n",
     "players = []\n",
+    "teams = []\n",
     "fields = ['Player', 'Team', 'Maps', 'K-D Diff', 'K/D', 'Rating (1.0)'] \n",
+    "fields2 = ['Team', 'Won-Lost', 'Pistol Win %', 'Round 2 Conversion', 'Round 2 Break'] \n",
     "# name of csv file \n",
     "def writeToCSV(players):\n",
     "    filename = \"data.csv\"\n",
@@ -46,7 +57,20 @@
     "\n",
     "        # writing the data rows \n",
     "        csvwriter.writerows(players)\n",
-    " \n",
+    "\n",
+    "def writeToCSV2(teams):\n",
+    "    filename = \"data2.csv\"\n",
+    "\n",
+    "    # writing to csv file \n",
+    "    with open(filename, 'w') as csvfile: \n",
+    "        # creating a csv writer object \n",
+    "        csvwriter = csv.writer(csvfile) \n",
+    "\n",
+    "        # writing the fields \n",
+    "        csvwriter.writerow(fields2) \n",
+    "\n",
+    "        # writing the data rows \n",
+    "        csvwriter.writerows(teams)\n",
     "    \n",
     "    \n",
     "def get_parsed_page(url):\n",
@@ -97,11 +121,15 @@
     "    print('--------------------------------------------')\n",
     "    print('PISTOL ROUNDS')\n",
     "    print('--------------------------------------------')\n",
-    "    for row in pistolTable.find_all(\"tr\"):\n",
-    "        print(row.get_text())\n",
+    "    for tr in pistolTable.find_all(\"tr\"):\n",
+    "        newArray = []\n",
+    "        for td in tr.find_all('td'):\n",
+    "            newArray.append(td.get_text())\n",
+    "        teams.append(newArray)\n",
+    "    writeToCSV2(teams)\n",
     "\n",
     "playerPerformanceByDate()\n",
-    "# pistolRoundByDate()\n",
+    "pistolRoundByDate()\n",
     "# driving()\n",
     "    "
    ]
@@ -525,7 +553,7 @@
     "    groups = soup.find_all(\"div\", {\"class\": \"group\"})\n",
     "    for group in groups:\n",
     "        for tr in group.find_all(\"tr\"):\n",
-    "            print(tr.text)\n",
+    "#             print(tr.text)\n",
     "eventDetails()"
    ]
   },
