fix column error

--- a/FinalProject_official.ipynb
+++ b/FinalProject_official.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -11,19 +11,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start date (yyyy-mm-dd, leave blank for 'All-time' results): 2019-01-01\n",
-      "End date (yyyy-mm-dd, leave blank for 'All-time' results): 2020-01-01\n",
+      "Start date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
+      "End date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
       "Map Selection. Choose one from the following: all, vertigo, dust2, mirage, overpass, nuke, inferno, cobblestone, cache, train.\n",
-      "Choose the map: mirage\n",
-      "https://www.hltv.org/stats/players?startDate=2019-01-01&endDate=2020-01-01&maps=de_mirage&rankingFilter=Top30\n",
-      "Start date (yyyy-mm-dd, leave blank for 'All-time' results): 2019-01-01\n",
-      "End date (yyyy-mm-dd, leave blank if you want 'All-time' results): 2020-01-01\n",
+      "Choose the map: all\n",
+      "https://www.hltv.org/stats/players?startDate=&endDate=&maps=de_all&rankingFilter=Top30\n",
+      "Start date (yyyy-mm-dd, leave blank for 'All-time' results): \n",
+      "End date (yyyy-mm-dd, leave blank if you want 'All-time' results): \n",
       "Map Selection. Choose one from the following: all, vertigo, dust2, mirage, overpass, nuke, inferno, cobblestone, cache, train.\n",
-      "Choose the map: mirage\n",
-      "Enter team ('TERRORIST or COUNTER_TERRORIST'):counter_terrorist\n",
-      "https://www.hltv.org/stats/teams/pistols?startDate=2019-01-01&endDate=2020-01-01&maps=de_mirage&side=COUNTER_TERRORIST&rankingFilter=Top30\n",
+      "Choose the map: all\n",
+      "Enter team ('TERRORIST or COUNTER_TERRORIST'):terrorist\n",
+      "https://www.hltv.org/stats/teams/pistols?startDate=&endDate=&maps=de_all&side=TERRORIST&rankingFilter=Top30\n",
       "--------------------------------------------------------------------------------\n",
-      "RUN THE 2 CELLS BELOW TO SEE THE PLAYER DATAFRAME AND THE TEAM PISTOL DATAFRAME\n",
+      "RUN THE 2 CELLS BELOW TO SEE THE \"PLAYER DATAFRAME\" AND \"TEAM PISTOL DATAFRAME\"\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
@@ -44,8 +44,8 @@
     "url = \"https://www.hltv.org/stats\"\n",
     "players = []\n",
     "teams = []\n",
-    "fields = ['Player', 'Team', 'Maps', 'K-D Diff', 'K/D', 'Rating (1.0)'] \n",
-    "fields2 = ['Maps', 'Won-Lost', 'Pistol Win %', 'Round 2 Conversion', 'Round 2 Break'] \n",
+    "fields = ['Player', 'Team', 'Maps', 'K-D_Diff', 'K/D', 'Rating_(1.0)'] \n",
+    "fields2 = ['Teams' ,'Maps', 'Won-Lost', 'Pistol_Win_%', 'Round_2_Conversion', 'Round_2_Break'] \n",
     "\n",
     "# name of csv file \n",
     "def writeToCSV(players):\n",
@@ -143,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------\n",
+      "Player Dataframe\n",
+      "-------------------------------\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -169,117 +178,120 @@
        "      <th></th>\n",
        "      <th>Player</th>\n",
        "      <th>Maps</th>\n",
-       "      <th>K-D Diff</th>\n",
+       "      <th>K-D_Diff</th>\n",
        "      <th>K/D</th>\n",
-       "      <th>Rating (1.0)</th>\n",
+       "      <th>Rating_(1.0)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>huNter-</td>\n",
-       "      <td>45</td>\n",
-       "      <td>226</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>1.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ZywOo</td>\n",
-       "      <td>45</td>\n",
-       "      <td>239</td>\n",
-       "      <td>1.31</td>\n",
-       "      <td>1.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>blameF</td>\n",
-       "      <td>37</td>\n",
-       "      <td>170</td>\n",
-       "      <td>1.28</td>\n",
-       "      <td>1.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jame</td>\n",
-       "      <td>39</td>\n",
-       "      <td>231</td>\n",
-       "      <td>1.38</td>\n",
-       "      <td>1.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EliGE</td>\n",
-       "      <td>32</td>\n",
-       "      <td>130</td>\n",
-       "      <td>1.23</td>\n",
+       "      <td>s1mple</td>\n",
+       "      <td>936</td>\n",
+       "      <td>5514</td>\n",
+       "      <td>1.35</td>\n",
        "      <td>1.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>device</td>\n",
+       "      <td>1180</td>\n",
+       "      <td>4860</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NiKo</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>3666</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>1.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>coldzera</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>4087</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>1.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XANTARES</td>\n",
+       "      <td>818</td>\n",
+       "      <td>1898</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>xsepower</td>\n",
-       "      <td>44</td>\n",
-       "      <td>220</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>1.21</td>\n",
+       "      <td>oskar</td>\n",
+       "      <td>803</td>\n",
+       "      <td>2156</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Brehze</td>\n",
-       "      <td>33</td>\n",
-       "      <td>115</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>1.21</td>\n",
+       "      <td>woxic</td>\n",
+       "      <td>582</td>\n",
+       "      <td>1653</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>1.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>NAF</td>\n",
-       "      <td>32</td>\n",
-       "      <td>95</td>\n",
-       "      <td>1.18</td>\n",
-       "      <td>1.18</td>\n",
+       "      <td>Jame</td>\n",
+       "      <td>569</td>\n",
+       "      <td>2088</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>sdy</td>\n",
-       "      <td>29</td>\n",
-       "      <td>98</td>\n",
-       "      <td>1.19</td>\n",
+       "      <td>ropz</td>\n",
+       "      <td>830</td>\n",
+       "      <td>2446</td>\n",
        "      <td>1.18</td>\n",
+       "      <td>1.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>frozen</td>\n",
-       "      <td>37</td>\n",
-       "      <td>132</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>1.17</td>\n",
+       "      <td>Brehze</td>\n",
+       "      <td>694</td>\n",
+       "      <td>1491</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>1.09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Player  Maps  K-D Diff   K/D  Rating (1.0)\n",
-       "0   huNter-    45       226  1.29          1.30\n",
-       "1     ZywOo    45       239  1.31          1.29\n",
-       "2    blameF    37       170  1.28          1.28\n",
-       "3      Jame    39       231  1.38          1.26\n",
-       "4     EliGE    32       130  1.23          1.25\n",
-       "5  xsepower    44       220  1.30          1.21\n",
-       "6    Brehze    33       115  1.22          1.21\n",
-       "7       NAF    32        95  1.18          1.18\n",
-       "8       sdy    29        98  1.19          1.18\n",
-       "9    frozen    37       132  1.22          1.17"
+       "     Player  Maps  K-D_Diff   K/D  Rating_(1.0)\n",
+       "0    s1mple   936      5514  1.35          1.25\n",
+       "1    device  1180      4860  1.25          1.16\n",
+       "2      NiKo  1140      3666  1.18          1.15\n",
+       "3  coldzera  1080      4087  1.23          1.14\n",
+       "4  XANTARES   818      1898  1.13          1.11\n",
+       "5     oskar   803      2156  1.16          1.11\n",
+       "6     woxic   582      1653  1.17          1.11\n",
+       "7      Jame   569      2088  1.24          1.10\n",
+       "8      ropz   830      2446  1.18          1.10\n",
+       "9    Brehze   694      1491  1.12          1.09"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Player Performance dataframe\n",
+    "print(\"-------------------------------\")\n",
+    "print('Player Dataframe')\n",
+    "print(\"-------------------------------\")\n",
     "player_df = pd.read_csv('data.csv')\n",
     "player_df = player_df.dropna(axis='columns', how ='all')\n",
     "player_df.head(10)\n"
@@ -287,9 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------\n",
+      "Team Pistol Dataframe\n",
+      "-------------------------------\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -311,126 +332,152 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Teams</th>\n",
        "      <th>Maps</th>\n",
        "      <th>Won-Lost</th>\n",
-       "      <th>Pistol Win %</th>\n",
-       "      <th>Round 2 Conversion</th>\n",
-       "      <th>Round 2 Break</th>\n",
+       "      <th>Pistol_Win_%</th>\n",
+       "      <th>Round_2_Conversion</th>\n",
+       "      <th>Round_2_Break</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Valiance</th>\n",
-       "      <td>27</td>\n",
-       "      <td>13 - 14</td>\n",
-       "      <td>48.1%</td>\n",
-       "      <td>84.6%</td>\n",
-       "      <td>7.1%</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Astralis</td>\n",
+       "      <td>1064</td>\n",
+       "      <td>529 - 535</td>\n",
+       "      <td>49.7%</td>\n",
+       "      <td>82.7%</td>\n",
+       "      <td>21.9%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Natus Vincere</th>\n",
-       "      <td>24</td>\n",
-       "      <td>11 - 13</td>\n",
-       "      <td>45.8%</td>\n",
-       "      <td>100.0%</td>\n",
-       "      <td>30.8%</td>\n",
+       "      <th>1</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>600</td>\n",
+       "      <td>289 - 311</td>\n",
+       "      <td>48.2%</td>\n",
+       "      <td>80.5%</td>\n",
+       "      <td>23.5%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Liquid</th>\n",
-       "      <td>32</td>\n",
-       "      <td>15 - 17</td>\n",
-       "      <td>46.9%</td>\n",
-       "      <td>80.0%</td>\n",
-       "      <td>17.6%</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>495 - 532</td>\n",
+       "      <td>48.2%</td>\n",
+       "      <td>79.0%</td>\n",
+       "      <td>22.6%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>fnatic</th>\n",
-       "      <td>38</td>\n",
-       "      <td>20 - 18</td>\n",
-       "      <td>52.6%</td>\n",
-       "      <td>85.0%</td>\n",
-       "      <td>5.6%</td>\n",
+       "      <th>3</th>\n",
+       "      <td>FaZe</td>\n",
+       "      <td>1038</td>\n",
+       "      <td>520 - 518</td>\n",
+       "      <td>50.1%</td>\n",
+       "      <td>79.4%</td>\n",
+       "      <td>20.3%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CR4ZY</th>\n",
-       "      <td>18</td>\n",
-       "      <td>11 - 7</td>\n",
-       "      <td>61.1%</td>\n",
-       "      <td>81.8%</td>\n",
-       "      <td>14.3%</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Vitality</td>\n",
+       "      <td>482</td>\n",
+       "      <td>252 - 230</td>\n",
+       "      <td>52.3%</td>\n",
+       "      <td>73.0%</td>\n",
+       "      <td>20.0%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>forZe</th>\n",
-       "      <td>44</td>\n",
-       "      <td>20 - 24</td>\n",
-       "      <td>45.5%</td>\n",
-       "      <td>70.0%</td>\n",
-       "      <td>17.4%</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Liquid</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>563 - 536</td>\n",
+       "      <td>51.2%</td>\n",
+       "      <td>82.9%</td>\n",
+       "      <td>19.3%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mousesports</th>\n",
-       "      <td>38</td>\n",
-       "      <td>20 - 18</td>\n",
-       "      <td>52.6%</td>\n",
-       "      <td>70.0%</td>\n",
-       "      <td>38.9%</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Space Soldiers</td>\n",
+       "      <td>400</td>\n",
+       "      <td>203 - 197</td>\n",
+       "      <td>50.7%</td>\n",
+       "      <td>84.2%</td>\n",
+       "      <td>12.2%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Heroic</th>\n",
-       "      <td>40</td>\n",
-       "      <td>24 - 16</td>\n",
-       "      <td>60.0%</td>\n",
-       "      <td>87.5%</td>\n",
-       "      <td>37.5%</td>\n",
+       "      <th>7</th>\n",
+       "      <td>mousesports</td>\n",
+       "      <td>1134</td>\n",
+       "      <td>571 - 563</td>\n",
+       "      <td>50.4%</td>\n",
+       "      <td>79.9%</td>\n",
+       "      <td>22.7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FURIA</th>\n",
-       "      <td>33</td>\n",
-       "      <td>16 - 17</td>\n",
-       "      <td>48.5%</td>\n",
-       "      <td>68.8%</td>\n",
-       "      <td>5.9%</td>\n",
+       "      <th>8</th>\n",
+       "      <td>G2</td>\n",
+       "      <td>1109</td>\n",
+       "      <td>521 - 588</td>\n",
+       "      <td>47.0%</td>\n",
+       "      <td>81.5%</td>\n",
+       "      <td>16.5%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>AVANGAR</th>\n",
-       "      <td>38</td>\n",
-       "      <td>15 - 23</td>\n",
-       "      <td>39.5%</td>\n",
-       "      <td>80.0%</td>\n",
-       "      <td>0.0%</td>\n",
+       "      <th>9</th>\n",
+       "      <td>fnatic</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>536 - 557</td>\n",
+       "      <td>49.0%</td>\n",
+       "      <td>78.5%</td>\n",
+       "      <td>20.9%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Maps Won-Lost Pistol Win % Round 2 Conversion Round 2 Break\n",
-       "Valiance         27  13 - 14        48.1%              84.6%          7.1%\n",
-       "Natus Vincere    24  11 - 13        45.8%             100.0%         30.8%\n",
-       "Liquid           32  15 - 17        46.9%              80.0%         17.6%\n",
-       "fnatic           38  20 - 18        52.6%              85.0%          5.6%\n",
-       "CR4ZY            18   11 - 7        61.1%              81.8%         14.3%\n",
-       "forZe            44  20 - 24        45.5%              70.0%         17.4%\n",
-       "mousesports      38  20 - 18        52.6%              70.0%         38.9%\n",
-       "Heroic           40  24 - 16        60.0%              87.5%         37.5%\n",
-       "FURIA            33  16 - 17        48.5%              68.8%          5.9%\n",
-       "AVANGAR          38  15 - 23        39.5%              80.0%          0.0%"
+       "            Teams  Maps   Won-Lost Pistol_Win_% Round_2_Conversion  \\\n",
+       "0        Astralis  1064  529 - 535        49.7%              82.7%   \n",
+       "1              SK   600  289 - 311        48.2%              80.5%   \n",
+       "2   Natus Vincere  1027  495 - 532        48.2%              79.0%   \n",
+       "3            FaZe  1038  520 - 518        50.1%              79.4%   \n",
+       "4        Vitality   482  252 - 230        52.3%              73.0%   \n",
+       "5          Liquid  1099  563 - 536        51.2%              82.9%   \n",
+       "6  Space Soldiers   400  203 - 197        50.7%              84.2%   \n",
+       "7     mousesports  1134  571 - 563        50.4%              79.9%   \n",
+       "8              G2  1109  521 - 588        47.0%              81.5%   \n",
+       "9          fnatic  1093  536 - 557        49.0%              78.5%   \n",
+       "\n",
+       "  Round_2_Break  \n",
+       "0         21.9%  \n",
+       "1         23.5%  \n",
+       "2         22.6%  \n",
+       "3         20.3%  \n",
+       "4         20.0%  \n",
+       "5         19.3%  \n",
+       "6         12.2%  \n",
+       "7         22.7%  \n",
+       "8         16.5%  \n",
+       "9         20.9%  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Team Pistol dataframe\n",
+    "print(\"-------------------------------\")\n",
+    "print('Team Pistol Dataframe')\n",
+    "print(\"-------------------------------\")\n",
     "team_pistol_df = pd.read_csv('data2.csv')\n",
     "team_pistol_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
